--- a/index.html
+++ b/index.html
@@ -1,11 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Library of Congress Search Engine</title>
+    <!--bootstrap-->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <!--jquery-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <div class="col-12 d-flex justify-content-center">
+      <div class="card d-flex justify-content-center">
+        <h3 class="card-header text-uppercase">
+          Library of Congress Search Engine
+        </h3>
+        <form id="user-form" class="card-body">
+          <input
+            name="search"
+            id="search"
+            type="text"
+            autofocus="true"
+            class="form-input"
+            placeholder="search!"
+          />
+          <div class="input-group mb-3">
+            <select
+              class="form-select"
+              id="inputGroupSelect03 format"
+              aria-label="Example select with button addon"
+            >
+              <option selected>Select a format</option>
+              <option value="Maps">Maps</option>
+              <option value="Audio">Audio</option>
+              <option value="Photos">Photos</option>
+              <option value="Manuscripts">Manuscripts</option>
+              <option value="Newspapers">Newspapers</option>
+              <option value="Notated Nusic">Notated Nusic</option>
+              <option value="Websites">Websites</option>
+            </select>
+          </div>
+          <button type="submit" class="btn">Click Me</button>
+        </form>
+      </div>
+    </div>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./assets/js/homepage.js"></script>
+  </body>
 </html>
