added a submit handler and getmoreinfo function

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <option value="photos">Photos</option>
               <option value="manuscripts">Manuscripts</option>
               <option value="newspapers">Newspapers</option>
-              <option value="notated-music">Notated Nusic</option>
+              <option value="notated-music">Notated Music</option>
               <option value="web-archives">Web Archives</option>
             </select>
           </div>
